--- a/client/style.css
+++ b/client/style.css
@@ -19,6 +19,8 @@ p {
   max-height: 90vh;
   overflow-y: scroll;
   overflow-wrap: break-word;
+  -ms-overflow-style: none;
+  scrollbar-width: none;
 }
 
 #message {
@@ -63,7 +65,52 @@ a {
   display: none;
 }
 
-#messages {
+.navbar::-webkit-scrollbar {
+  display: none;
+}
+
+.navbar {
+  background-color: #333;
+  /* overflow-x: scroll; */
+  /* overflow-y: hidden; */
+  position: fixed;
+  bottom: 0;
+  width: 100%;
+  white-space: normal;
+  display: flex;
+  overflow-x: scroll;
   -ms-overflow-style: none;
   scrollbar-width: none;
+  scroll-behavior: smooth;
+  /* scroll-snap-type: x-manditory; */
+  /* scroll-snap-align: start; */
+  justify-content: center;
+}
+
+.navbar a {
+  float: left;
+  flex-direction: column;
+  /* display: flex; */
+  color: #f2f2f2;
+  text-align: center;
+  padding: 14px 16px;
+  text-decoration: none;
+  font-size: 17px;
+  border-left: 1px solid #ddd;
+  border-right: 1px solid #ddd;
+
+}
+
+.navbar a:hover {
+  background-color: #ddd;
+  color: black;
+}
+
+.navbar a.active {
+  background-color: #0062ff;
+  color: white;
+}
+
+.navbar .icon {
+  display: none;
 }
