--- a/client/style.css
+++ b/client/style.css
@@ -96,8 +96,11 @@ a {
   padding: 14px 16px;
   text-decoration: none;
   font-size: 17px;
-  border-left: 1px solid #ddd;
   border-right: 1px solid #ddd;
+}
+
+.navbar a:first-of-type {
+  border-left: 1px solid #ddd;
 
 }
 
@@ -106,9 +109,9 @@ a {
   color: black;
 }
 
-.navbar a.active {
-  background-color: #0062ff;
-  color: white;
+.navbar .active {
+  background-color: #0062ff !important; 
+  color: white !important;
 }
 
 .navbar .icon {
