--- a/client/style.css
+++ b/client/style.css
@@ -68,14 +68,14 @@ a {
   display: none;
 }
 
-.navbar::-webkit-scrollbar {
+/* .navbar::-webkit-scrollbar {
   display: none;
 }
 
 .navbar {
   background-color: #333;
-  /* overflow-x: scroll; */
-  /* overflow-y: hidden; */
+  /* overflow-x: scroll; 
+  /* overflow-y: hidden; 
   position: fixed;
   bottom: 0;
   width: 100%;
@@ -85,15 +85,15 @@ a {
   -ms-overflow-style: none;
   scrollbar-width: none;
   scroll-behavior: smooth;
-  /* scroll-snap-type: x-manditory; */
-  /* scroll-snap-align: start; */
+  /* scroll-snap-type: x-manditory; 
+  /* scroll-snap-align: start; 
   justify-content: center;
 }
 
 .navbar a {
   float: left;
   flex-direction: column;
-  /* display: flex; */
+  /* display: flex; 
   color: #f2f2f2;
   text-align: center;
   padding: 14px 16px;
@@ -101,6 +101,7 @@ a {
   font-size: 17px;
   border-right: 1px solid #ddd;
 }
+
 
 .navbar a:first-of-type {
   border-left: 1px solid #ddd;
@@ -115,8 +116,61 @@ a {
 .navbar .active {
   background-color: #0062ff !important; 
   color: white !important;
+} */
+
+/* The side navigation menu */
+.sidebar {
+  margin: 0;
+  padding: 0;
+  width: 200px;
+  background-color: #f1f1f1;
+  position: fixed;
+  height: 100%;
+  overflow: auto;
 }
 
-.navbar .icon {
-  display: none;
+/* Sidebar links */
+.sidebar a {
+  display: block;
+  color: black;
+  padding: 16px;
+  text-decoration: none;
+}
+
+/* Active/current link */
+.sidebar a.active {
+  background-color: #04AA6D;
+  color: white;
+}
+
+/* Links on mouse-over */
+.sidebar a:hover:not(.active) {
+  background-color: #555;
+  color: white;
+}
+
+/* Page content. The value of the margin-left property should match the value of the sidebar's width property */
+div.content {
+  margin-left: 200px;
+  padding: 1px 16px;
+  height: 1000px;
+}
+
+/* On screens that are less than 700px wide, make the sidebar into a topbar */
+@media screen and (max-width: 700px) {
+  .sidebar {
+    width: 100%;
+    height: auto;
+    position: relative;
+  }
+  .sidebar a {float: left;}
+  div.content {margin-left: 0;}
+}
+
+/* On screens that are less than 400px, display the bar vertically, instead of horizontally */
+@media screen and (max-width: 400px) {
+  .sidebar a {
+    text-align: center;
+    float: none;
+  }
 }
