--- a/client/style.css
+++ b/client/style.css
@@ -1,8 +1,9 @@
-html, body {
+html,
+body {
   background-color: #000000;
   color: #eeeeee;
-/*   height: 100vh; */
-/*   width: 100vw; */
+  /*   height: 100vh; */
+  /*   width: 100vw; */
   margin: 0;
   font-family: Consolas, Menlo, Monaco, Lucida Console, Liberation Mono, DejaVu Sans Mono, Bitstream Vera Sans Mono, Courier New, monospace, serif;
   overflow: none;
@@ -28,7 +29,7 @@ p {
   width: 80vw;
   outline: none;
   display: inline;
-  
+
 }
 
 #message-start {
@@ -36,7 +37,8 @@ p {
   word-wrap: break-word;
 }
 
-#back, #settings {
+#back,
+#settings {
   position: absolute;
   right: 0.5vw;
   top: 0.5vh;
@@ -117,6 +119,6 @@ a {
 }
 
 .navbar .active {
-  background-color: #0062ff !important; 
+  background-color: #0062ff !important;
   color: white !important;
 }
